# Cvxrs-Studio

./: .gitignore  CLI  Cargo.toml  System.IO.TextWriter+SyncTextWriter
.github/workflows/: ci.yml
crates/algos/: Cargo.toml
crates/algos/src/: admm.rs  ipm.rs  lib.rs
crates/algos/tests/: admm.rs
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/benches/: Cargo.toml
crates/benches/benches/: solve_qp.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  math.rs  options.rs  problem.rs  scaling.rs  solution.rs  stats.rs  traits.rs
crates/gui/: Cargo.toml
crates/gui/src/: main.rs
crates/io/: Cargo.toml
crates/io/src/: lib.rs
crates/linsys/: Cargo.toml
crates/linsys/src/: dense.rs  lib.rs  sparse.rs
examples/: box_qp.json  box_qp.rs  flow_lp.json  flow_lp.rs  portfolio.json  portfolio.rs
scripts/: build_gui_release.ps1
