[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/linsys",
    "crates/algos",
    "crates/api",
    "crates/cli",
    "crates/io",
    "crates/benches",
    "crates/gui",
]

[workspace.package]
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
authors = ["Convexa Contributors <dev@convexa.rs>"]
repository = "https://example.com/convexa/cvxrs"
homepage = "https://example.com/convexa/cvxrs"
documentation = "https://example.com/convexa/cvxrs/docs"
description = "cvxrs: Pure Rust convex optimization solvers with ADMM and IPM backends."

[workspace.dependencies]
approx = "0.5"
anyhow = "1"
bitflags = "2"
clap = { version = "4.5", features = ["derive"] }
criterion = { version = "0.5", default-features = false, features = ["rayon"] }
faer = { version = "0.18", default-features = false, features = ["std"] }
indexmap = "2"
itertools = "0.12"
nalgebra = "0.32"
num-traits = "0.2"
ordered-float = "4"
rand = { version = "0.8", features = ["std", "small_rng"] }
rayon = "1.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sprs = { version = "0.11", default-features = false, features = ["serde"] }
thiserror = "1"
time = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "registry", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
eframe = { version = "0.27", default-features = false, features = ["wgpu"] }
egui = "0.27"
rfd = "0.13"

[workspace.metadata.cargo-udeps.ignore]
workspace = true
