[package]
name = "cvxrs-api"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Public user-facing API and builders for cvxrs."

[dependencies]
anyhow.workspace = true
cvxrs-algos = { path = "../algos" }
cvxrs-core = { path = "../core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
