[package]
name = "cvxrs"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Command-line interface for the cvxrs convex optimisation suite."

[dependencies]
anyhow.workspace = true
clap.workspace = true
cvxrs-api = { path = "../api" }
cvxrs-core = { path = "../core" }
cvxrs-io = { path = "../io" }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
