[package]
name = "cvxrs-core"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Core abstractions, data structures, and utilities for the cvxrs convex optimization suite."

[dependencies]
anyhow.workspace = true
approx.workspace = true
bitflags.workspace = true
indexmap.workspace = true
itertools.workspace = true
num-traits.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sprs.workspace = true
thiserror.workspace = true
time.workspace = true
tracing.workspace = true
faer.workspace = true

[features]
default = ["std"]
std = []
f32 = []
