[package]
name = "cvxrs-gui"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Graphical user interface for the cvxrs solvers."

[dependencies]
anyhow.workspace = true
cvxrs-api = { path = "../api" }
cvxrs-core = { path = "../core" }
cvxrs-io = { path = "../io" }
eframe.workspace = true
egui.workspace = true
rfd.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest = { version = "0.12", features = ["json", "blocking"] }
base64 = "0.21"
