[package]
name = "cvxrs-linsys"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Linear system backends and KKT factorizations for cvxrs."

[dependencies]
anyhow.workspace = true
cvxrs-core = { path = "../core" }
faer.workspace = true
num-traits.workspace = true
serde.workspace = true
sprs.workspace = true
thiserror.workspace = true
tracing.workspace = true

[features]
default = ["dense"]
dense = []
sparse = []
blas = []
suitesparse = []
gpu = []
